# tema_vs_code_esron_dark

./: .gitignore  .vscodeignore  CHANGELOG.md  README.md  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  lint.yml  release.yml
docs/: changelog-dev.md  design-philosophy.md  language-support.md  palette.md  roadmap.md  syntax-map.md  tokens.md
preview/: README.md  all-in-one.md
preview/backend/: preview.cs  preview.dart  preview.java  preview.kt  preview.php  preview.py  preview.rb  preview.scala  preview.swift
preview/classics/: preview.ex  preview.lsp  preview.ml  preview.pas
preview/devops/: CMakeLists.txt  preview.dockerfile  preview.mak  preview.tf
preview/docs/: preview.md
preview/science/: preview.R  preview.f90  preview.jl  preview.sql
preview/scripting/: preview.bashrc  preview.ini  preview.json  preview.lua  preview.ps1  preview.sh  preview.toml  preview.xml  preview.yaml
preview/systems/: preview.asm  preview.c  preview.cpp  preview.go  preview.rs  preview.zig
preview/web/: preview.css  preview.html  preview.js  preview.jsx  preview.tsx
reference/: colors.md  inspiration.md  semantic-tokens.md  textmate-scopes.md  token-inspector.md  vscode-theme-reference.md
themes/: Esron Dark-color-theme.json
